# mechknownet

./: CMakeLists.txt  README.md  package.xml
launch/: mechknownet_server.launch
model/: mechknownet_3states.py
pointnet_utils/: pointnet_util.py
pointnet_utils/3d_interpolation_cpu/: tf_interpolate_compile.sh
pointnet_utils/grouping_cpu/: tf_grouping_compile.sh
pointnet_utils/sampling_cpu/: new_compile.sh  tf_sampling.cpp~  tf_sampling_cpu.py  tf_sampling_cpu.py~
script/: check_output_without_execute.py  drawer_demo.py  hsr_look_around_server.py  mask_rcnn_server.py  mechknownet_detect_server.py  mechknownet_send_tf.py  pound.py  pour_demo.py  support.py
script/log0224/: affnet2_3states.py  log_train.txt  model.ckpt.index  train.py
script/log0224/test/: events.out.tfevents.1582526392.pr2-desktop
script/mask_rcnn/: mask_rcnn_utils.py
src/: system.cpp
srv/: lookaround.srv  mechknownetdetect.srv  mechknownetsendtf.srv  mechknownetsys.srv  mrcnn.srv
